--- a/app/src/main/res/layout/vote.xml
+++ b/app/src/main/res/layout/vote.xml
@@ -27,7 +27,7 @@
         android:layout_width="300dp"
         android:layout_height="56dp"
         android:layout_gravity="start"
-        android:checkedButton="@+id/impossible"
+        android:checkedButton="@+id/abstain"
         android:layoutDirection="rtl"
         android:orientation="horizontal"
         android:textAlignment="textStart"
@@ -46,11 +46,11 @@
             android:textSize="20sp" />
 
         <RadioButton
-            android:id="@+id/impossible"
+            android:id="@+id/abstain"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
-            android:text="@string/impossible"
+            android:text="@string/abstain"
             android:textSize="20sp" />
 
         <RadioButton
